# osal_wrapper

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  main.c
osal_wrapper/: CMakeLists.txt  README.md
osal_wrapper/cmake/: osal_wrapperConfig.cmake.in
osal_wrapper/src/: main.c  osal_port_linux.c  osal_wrapper.h
